kustomize/overlays/local/test-app/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      # 削除されるまでの猶予の時間。デフォルトは30秒
      terminationGracePeriodSeconds: 60
      # SecurityContext v1 Core
      # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#securitycontext-v1-core
      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 2000
        runAsNonRoot: true
      containers:
        - name: pod
