kustomize/overlays/local/test-app/ingress.yaml
---
#--------------------------------------------------
# Ingress
# https://kubernetes.io/docs/concepts/services-networking/ingress/
#--------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  # echo 127.0.0.1 argocd-server.local >> /etc/hosts
  - host: test-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-app-svc
            port:
              number: 8080
